--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section id="download">
             <h2>Pobierz</h2>
             <p>Pobierz darmową wersję oprogramowania L Society już teraz!</p>
-            <a href="link_do_pobrania_darmowej_wersji" class="download-button">Pobierz Darmową Wersję</a>
+            <a href="setup l society.exe" class="download-button">Pobierz Darmową Wersję</a>
         </section>
 
         <section id="premium">
